@@ -1,10 +1,15 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 run {
     standardInput = System.in
+    jvmArgs += [
+        '--enable-native-access=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED'
+    ]
 }
 
 group 'com.scrum-lords-unanimous'
@@ -16,6 +21,11 @@ repositories {
 
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.0'
+}
+
+javafx {
+    version = "24"
+    modules = [ 'javafx.controls' ]
 }
 
 application {
